--- a/scss/main.sass
+++ b/scss/main.sass
@@ -8,6 +8,7 @@
 
 // 3. Base Styles
 @import base/base
+@import base/typography
 
 // 4. Layout
 @import layout/grid
@@ -16,4 +17,4 @@
 
 
 // 5. Components
-
+@import components/buttons
