--- a/scss/layout/_header.sass
+++ b/scss/layout/_header.sass
@@ -1,13 +1,12 @@
 .main-header
     position: absolute
-    top:1em
-    right:0
-    left:0
+    top: 0
+    right: 0
+    left: 0
+    padding-top: 1em
 
 .logo
     width: 25%
     min-width: 10rem
     max-width: 15rem
 
-.main-nav
-    display: none
