--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,8 @@ h2 {
   position: absolute;
   top: 0;
   right: 0;
-  left: 0;
+  left: 100%;
+  overflow: hidden;
   font-size: 1.2rem;
 }
 .main-nav ul {
@@ -453,6 +454,33 @@ h2 {
 .main-nav a {
   color: white;
   text-decoration: none;
+}
+
+.nav-toggle {
+  display: block;
+  padding: 1em;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  cursor: pointer;
+}
+
+.hamburger, .hamburger::before, .hamburger::after {
+  content: "";
+  display: block;
+  width: 2em;
+  height: 3px;
+  background: white;
+}
+
+.hamburger::before {
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+}
+
+.hamburger::after {
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
 }
 
 .main-header {
