--- a/scss/layout/_nav.sass
+++ b/scss/layout/_nav.sass
@@ -3,7 +3,8 @@
     position: absolute
     top: 0
     right:0
-    left: 0
+    left: 100%
+    overflow: hidden
     font-size: 1.2rem
     
     
@@ -29,3 +30,26 @@
         color: $text-inverse
         text-decoration: none
 
+// Hamburger Menu
+
+.nav-toggle
+    display: block
+    
+    padding: 1em
+    position: absolute
+    right: 1em
+    top: 1em
+    cursor: pointer
+
+.hamburger, .hamburger::before, .hamburger::after
+    content: ''
+    display: block
+    width: 2em
+    height: 3px
+    background: $white
+
+.hamburger::before
+    transform: translateY(-6px)
+
+.hamburger::after
+    transform: translateY(3px)
